// Requests
message Request {
  oneof msg {
    Error error = 1;
    Identify identify = 2;
    Ping ping = 3;
    Disconnect disconnect = 4;
    Update update = 5;
    Scan scan = 6;
  }
  optional string access_token = 64;
}

message Identify {
  optional string name = 1;
}

message Ping {
  optional bytes payload = 1;
}

message Disconnect {
}

message Update {
  optional double angular_velocity = 1;
}

message Scan {
}

// Responses
message Response {
  oneof msg {
    Error error = 1;
    Identified identified = 2;
    Pong pong = 3;
    Disconnected disconnected = 4;
    Updated updated = 5;
    Scanned scanned = 6;
  }
}

message Identified {
  required string access_token = 1;
  optional string server_info = 2;
}

message Pong {
  optional bytes payload = 1;
}

message Disconnected {
}

message Updated {
  required double angular_velocity = 1;
}

message Scanned {
  message Hit {
    required double distance = 1;
    required double angle = 2;
  }

  repeated Hit hit = 1;
}

message Error {
  enum Kind {
    WIRE_ERROR = 1;
    IO_ERROR = 2;
    UNKNOWN_REQUEST = 3;
    UNAUTHORIZED = 4;
    PLAYER_NAME_TAKEN = 5;
  }

  required Kind kind = 1;
  optional string msg = 2;
}
